fixed package.json + backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "afnuz-academy",
+  "name": "afnuz-academy-backend",
   "version": "1.0.0",
-  "description": "Afnuz Academy website + Vercel backend",
+  "description": "Afnuz Academy Backend API (Express + Nodemailer)",
+  "main": "server.js",
   "scripts": {
-    "build": "",
-    "start": ""
+    "start": "node server.js"
   },
   "dependencies": {
-    "nodemailer": "latest"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.13"
   },
   "license": "ISC"
 }
